# v0.25.5
- Added experimental work on making accessible graphs for mounting on the web
- added Volker Sorge and Donal Fitzpatrick to the package contributors list
- added MakeAccessibleSVG() and AddXML() as well as a bunch of internal functions to do the hard work.


# v0.25.4
- added JooYoung Seo and TK Lee to the package contributors list
- updated WriteR.pyw
- fixed small typos
- added MakeSLidy() which takesa folder of Rmd files and turns them into a slidy presentation

# v0.25.3
- WriteR() failed for JYS. Suggestion to use file.path() from HB added to WriteR(). Proved insufficient so hard wired quote marks for command line being issued have been included. JYS reported success.
- fixed URL for CRAN repository of package in CITATION file
- then fixed a bunch of other URLs from http to https in DESCRIPTION and vignette files.
- added folder of templates for (fairly) common analyses which are slightly beyond the OneFactor(), OnePredictor() etc 
type; it will also include the code chunks that are reused frequently in other functions.
- added UseTemplate() to make use of the template files faster. Not intended for wide use at this stage.
- Moved installr package from Imports to Suggests so that installation from GitHub works for OS!=Windows.
- removed use of require(<p kg>) and used requireNamespace("<pkg>") instead, and then used pkg::blah()
- added initial version of ThreeFactors()
- updated FindReplace() to avoid using pattern matching
- added Rnw2Rmd() to get a head start on the conversion from *.Rnw to *.Rmd 
- updated the BrailleR History vignette.


# v0.25.2
- fixed formatting of the R functions so it is easier to read. Request from Henrik Bengtsson resolved using the rfmt package seen at UseR!2016


# v0.25.1
- added SpellCheck() which is an interface to spell check a set of files, allowing ignore this time, always for all files, always for this file, replacement, and reading the word in context.
- added CleanCSV() for removing white space in (csv) files