@@ -19,6 +19,10 @@ import(XML)
 importFrom("xtable", "xtable")
 S3method(AddXML,default)
   S3method(AddXML,histogram)
+S3method(Augment,default)
+  S3method(Augment,boxplot)
+  S3method(Augment,ggplot)
+  S3method(Augment,histogram)
 S3method(dotplot,default)
   S3method(dotplot,formula)
 S3method(MakeAccessibleSVG,default)
