@@ -2,6 +2,7 @@
 - Added experimental work on making accessible graphs for mounting on the web
 - added Volker Sorge and Donal Fitzpatrick to the package contributors list
 - added MakeAccessibleSVG() and AddXML() as well as a bunch of internal functions to do the hard work.
+- added Augment() method to take the functionality out of VI() that adds the content that feeds into the text descriptions because it will get used in other processes from here on.
 
 
 # v0.25.4
